--- a/templates/index.html
+++ b/templates/index.html
@@ -2,29 +2,22 @@
 
 
     {% block content %}
-{{ page }}
-<br>
-{% for recipe in recipes %}
 
-<div class="card container" style="max-width: 540px;">
-  <div class="row g-0">
-    <div class="col-md-4">
-      <img src="{{ recipe.cover }}" class="img-fluid rounded-start" alt="...">
-    </div>
-    <div class="col-md-8">
-      <div class="card-body">
-        <h5 class="card-title">{{ recipe.title }}</h5>
-        <p class="card-text">{{ recipe.description }}</p>
-      </div>
-    </div>
+<div class="container">
+<div class="row pt-2 pb-2 container">
+
+
+    {% for recipe in recipes %}
+<div class="card container mb-2" style="width: 18rem;">
+  <img src="{{ recipe.cover }}" class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">{{ recipe.title }}</h5>
+    <p class="card-text">{{ recipe.description| truncate(60) }}</p>
+    <a href="{{ url_for('recipe_info', recipe_uuid=recipe.uuid) }}" class="btn btn-primary">Дивитись</a>
   </div>
 </div>
-<br>
+    {% endfor %}
 
-{% endfor %}
-
-
-
-
-
-{% endblock %}
+</div>
+</div>
+    {% endblock %}
